--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,4 @@
 {
-    "files.associations": {
-        "stdio.h": "c",
-        "arvore.h": "c"
-    },
-    "cmake.sourceDirectory": "/workspaces/meus_codigos/Estrutura II/lab/arvores/tentativa01"
+    "explorer.compactFolders": false,
+    
 }
