add modelo e alterações de pasta

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "workbench.colorTheme": "OM Theme (Night Owl Italic)",
     "explorer.compactFolders": false,
-    
+    "workbench.iconTheme": "vscode-icons",
 }
